<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas/android.com/tools" tools:ignore="TypographyDashes">

    <string name="app_name">SmartAppTeam4</string>
    <string name="hello_world">Hello Girls!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="title_activity_service_option">ServiceOptionActivity</string>
    <string name="title_activity_clinics">ClinicsActivity</string>
    <string name="title_activity_clinic_dates">ClinicDatesActivity</string>
    <string name="title_activity_appointment_calendar">AppointmentCalendarActivity</string>
    <string name="title_activity_service_user">ServiceUserActivity</string>
    <string name="title_activity_free_slots">FreeSlotsActivity</string>
    <string name="title_activity_find_service_user">FindServiceUserActivity</string>
    <string name="title_activity_confirm_appointment">ConfirmAppointmentActivity</string>
    <string name="title_activity_ante_natal">AnteNatalActivity</string>
    <string name="title_activity_pre_natal">PreNatalActivity</string>
    <string name="title_activity_ante_natal_edit">AnteNatalEditActivity</string>
    <string name="title_activity_pre_natal_edit">PreNatalEditActivity</string>
    <string name="title_activity_service_user_edit">ServiceUserEditActivity</string>
    <string name="title_activity_service_user_address">ServiceUserAddressActivity</string>
    <string name="title_activity_service_user_address_edit">ServiceUserAddressEditActivity</string>
    <string name="login_bottom">National Maternity Hospital\nABOUT</string>
    <string name="view_appointments">View Appointments</string>
    <string name="correct_appointment_calendar">Select the correct appointment calendar</string>
    <string name="clinics_ante_natal">Clinics (Ante-Natal)</string>
    <string name="btn_forward">FORWARD</string>
    <string name="visits_post_natal">Visits (Post-Natal)</string>
    <string name="btn_back_arrow">Back Arrow</string>
    <string name="forward_btn">Forward Btn</string>
    <string name="title_activity_service_options">Service Options</string>
    <string name="service_optiontext">Select Service Option</string>
    <string name="title_activity_clinic_options">Clinics</string>
    <string name="clinic_hint">Select a calendar from </string>
    <string name="clinic_optiontext">Select the Clinic Calendar youd like to view</string>
    <string name="clinic_name_bookingday">Clinic Name and Days for Appointments</string>
    <string name="booking_date_tmp">Weekly, Monday</string>
    <string name="btn_back">BACK</string>
    <string name="btn_home">HOME</string>
    <string name="btn_book">BOOK</string>
    <string name="btn_prev">PREV</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_done">DONE</string>
    <string name="btn_ante_natal">Ante_natal</string>
    <string name="btn_personal">Personal</string>
    <string name="btn_postnatal">Post_natal</string>
    <string name="btn_parity">Parity -></string>
    <string name="btn_obstretic_history">Obstretic History</string>
    <string name="textview_edd">EDD</string>
    <string name="textview_gestation">Gestation</string>
    <string name="textview_bloodgroup">Blood Group</string>
    <string name="textview_rhesus">Rhesus</string>
    <string name="textview_antenatal_edit">EDIT</string>
    <string name="service_userdetail">Sarah McLaughlan-Murphy</string>
    <string name="mainview_title">View Appoitments</string>
    <string name="mainview_subtitle">Select the correct appoitment calendar</string>
    <string name="btn_calendar">CALENDAR</string>
    <string name="app_calendar">APPOINTMENT CALENDAR</string>
    <string name="service_user">Service User</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="sub_text">temporary sub text</string>
    <string name="date_tmp">Wed, 12/01/2015</string>
    <string name="time_tmp">9:15</string>
    <string name="user_tmp">Harry Potter</string>
    <string name="data_tmp">23+4</string>
    <string name="free_slot">Free Slot</string>
    <string name="btn_info">info</string>
    <string name="btn_add">ADD</string>
    <string name="app_number">5 Scheduled Appointments</string>
    <string name="ante_natal_userdetail">Sarah McLachnan Murphy</string>
    <string name="free_slots">Free Slots</string>
    <string name="select_slot">Select A Slot</string>
    <string name="time_15">15 mins \></string>
    <string name="findservice_hint">Search by service user\'s hospital number, name and /or date of birth \n
        							You can combne search terms in one line if you like.</string>
    <string name="user_address_tmp">Apartment \n 185, The George, Charlotte Quay Dock, \n Ringsend Rd, Dublin 4</string>
    <string name="address_hint">Direction hints</string>
    <string name="address_hint_tmp">It\'s opposite Boland\'s Mill, just on the south side
        							of the bridge over the canal  in Grand Calan Dock.
        							There\'s underground parking</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_plus">+</string>
    <string name="search_results">Search results:</string>
    <string name="search_result_tmp">Search Result 1</string>
    <string name="search_hint">Enter search parameters &#8230;</string>
    <string name="app_confirm_hint">Don\'t book anything in the PM</string>
    <string name="hospital_number">Hospital Number</string>
    <string name="appoitment_clinic">Appoitment Clinic</string>
    <string name="appoitment_date">Appoitment Date</string>
    <string name="appoitment_time">Appoitment Time</string>
    <string name="appoitment_duration">Duration</string>
    <string name="user_name_tmp">Sara MacLachlann-Murphy</string>
    <string name="hospital_number_tmp">H12344321</string>
    <string name="serviceuser_dob_tmp">15-02-1984</string>
    <string name="clinic_name_tmp">Kilmacanogue</string>
    <string name="email_to">Email to:</string>
    <string name="email_tmp">sara.maclachlann@banana.com</string>
    <string name="sms_to">SMS to:</string>
    <string name="phone_tmp">+353889871234</string>
    <string name="btn_confirm_app">Confirm Appoitment</string>
    <string name="header_title">Main View Title</string>
    <string name="header_subtitle">Main View Subtitle</string>
    <string name="go">GO</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="serviceuser_userdetail">Sarah McLachnan Murphy \n 28yrs, P:2+1, G:34+5</string>
    <string name="serviceuser_contact">H12344321 \nsara.maclachlann@banana.com \n+353 889 871 234</string>
    <string name="serviceuser_nextofkin">Laura Murphy \n +353 889 871 234</string>
    <string name="serviceuser_btn_book">Book Appointment</string>
    <string name="title_activity_obstretic_history">ObstreticHistoryActivity</string>
    <string name="title_activity_parity">ParityActivity</string>
    
    <string name="spinner_blood_title">Blood Type</string>
    <string name="spinner_rhesus_title">Rhesus</string>
    <string name="spinner_hearing_title">Hearing</string>
	<string name="spinner_feeding_title">Feeding</string>
	<string name="spinner_nbst_title">NBST</string>
</resources>
