<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/app_calend_adapter_text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/time_tmp"
        />
    <TextView 
        android:id="@+id/app_calendar_adapter_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/user_tmp"
        />
    <TextView 
        android:id="@+id/app_calendar_adapter_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/date_tmp"
        />
    <Button 
        android:id="@+id/app_calendar_adapter_btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/btn_info"
        />
    

</LinearLayout>
