<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    
    >
    
   <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="start"
       android:layout_weight="5"
       >
       
        <TextView 
        	android:id="@+id/clinicdates_adapter_text_head"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/clinic_name"
        	android:textStyle="bold"
        	
        />
        
        <TextView 
        	android:id="@+id/clinicdates_adapter_text_sub"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/sub_text"
        	android:textStyle="italic"
        />
        
   </LinearLayout>
   
   <Button 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="end"
       android:text="@string/go"
       android:textStyle="bold"
       android:layout_weight="1"
       />
    

</LinearLayout>
<!-- 
just nothing.. -->
